--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 .cursor-pointer {
 	cursor: pointer;
 }
+
+.fullWidth{
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: initial;
+}
